<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="my_notification_channel_id">myChannelID</string>
    <string name="my_notification_channel_name">myChannelName</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="stringCloudDownloadImageDesc">Cloud Download Image</string>
    <string name="stringGlide">Glide - Image Loading Library by BumpTech</string>
    <string name="stringRepository">LoadApp - Current repository by Udacity</string>
    <string name="stringRetrofit">Retrofit - Type-safe HTTP client for Android and Java by Square. Inc</string>
    <string name="stringCustomButtonDesc">Custom Button</string>
    <string name="stringDownload">Download Selected</string>
    <string name="loadingString">Downloading Now</string>
    <string name="stringFileNameLabel">File Name:</string>
    <string name="stringStatusLabel">Status:</string>
    <string name="stringOkButton">OK</string>
    <string name="stringMotionLayoutInstructions">Please click on the Image to preview the MotionLayout Capabilities</string>
</resources>
