<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/downloadImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/stringCloudDownloadImageDesc"
        android:src="@drawable/cloud_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimenSmallMargin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadImage">

        <RadioButton
            android:id="@+id/radioGlide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringGlide"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringRepository"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioRetrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringRetrofit"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>